# QTaudio

./: CHANGELOG.md  CMakeLists.txt  LICENSE  NOTES.txt  POLICY-notes.txt  QTaudio.apparmor  QTaudio.desktop.in  README.md  clickable.json  main.cpp  manifest.json.in
plugins/Example/: CMakeLists.txt  audiogen.cpp  audiogen.h  example.cpp  example.h  plugin.cpp  plugin.h  recorder.cpp  recorder.h
po/: qtaudio.kaputnikgo.pot
qml/: About.qml  Main.qml  Record.qml  qml.qrc
scripts/: CMakeLists.txt  headphone_vol.sh  headphones.sh  init_state.sh  mic1_unmute.sh  mic2_unmute.sh  mic_mute.sh  mic_unmute.sh  speaker_vol.sh  speakers.sh
