set(ARCH_TRIPLET $ENV{ARCH_TRIPLET})
install(FILES "headphones.sh" DESTINATION ${DATA_DIR}scripts)
install(FILES "headphone_vol.sh" DESTINATION ${DATA_DIR}scripts)
install(FILES "speakers.sh" DESTINATION ${DATA_DIR}scripts)
install(FILES "speaker_vol.sh" DESTINATION ${DATA_DIR}scripts)
install(FILES "mic_mute.sh" DESTINATION ${DATA_DIR}scripts)
install(FILES "mic_unmute.sh" DESTINATION ${DATA_DIR}scripts)
